# palms_mangment_system

./: .gitignore  README.md  instance_ip  plan.md
ansible/: inventory.ini  playbook.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  development.ini  pyproject.toml
backend/docker/: entrypoint.sh
backend/migrations/: env.py
backend/migrations/versions/: 20260718_0001_initial_baseline.py  20260718_0002_core_domain.py  20260718_0003_backend_advanced.py
backend/palms_api/: __init__.py  advanced_views.py  auth_views.py  config.py  database.py  domain_views.py  email_service.py  errors.py  images.py  logging.py  models.py  reporting.py  responses.py  scheduler.py  schemas.py  security.py  seeding.py  services.py  storage.py  validation.py  views.py  worker.py  wsgi.py
backend/palms_api/templates/emails/: base.html.jinja2  notification.html.jinja2  password_reset.html.jinja2  scheduled_report.html.jinja2  user_invitation.html.jinja2
backend/scripts/: create_super_admin.py  seed_demo_data.py  seed_full_demo_data.py
backend/tests/: conftest.py  test_api_comprehensive.py  test_auth_and_domain.py  test_backend_advanced.py  test_error_responses.py  test_operational_endpoints.py
deploy/: compose.env.example  docker-compose.yml
docs/: local-development.md
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
k8s/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  kustomization.yaml  local-env-configmap.yaml  local-env-secret.yaml  (+11 more)
(+162 files in other folders)
